--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "homeseer",
   "name": "HomeSeer",
-  "documentation": "https://github.com/marthoc/homeseer",
+  "documentation": "https://github.com/jrhubott/homeseer",
   "dependencies": [],
   "codeowners": ["@marthoc"],
-  "requirements": ["pyhs3==0.12"]
+  "requirements": []
 }
