--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
   "config_flow": true,
   "documentation": "https://github.com/jrhubott/homeseer",
   "dependencies": [],
-  "codeowners": ["@marthoc"],
-  "requirements": []
+  "codeowners": ["@marthoc","jason@rhusoft.com"],
+  "requirements": ["pyhs3ng ~= 1.0"]
 }
