--- a/custom_compoents/homeseer/manifest.json
+++ b/custom_compoents/homeseer/manifest.json
@@ -3,6 +3,7 @@
   "name": "HomeSeer",
   "config_flow": true,
   "documentation": "https://github.com/jrhubott/homeseer",
+  "issue_tracker": "https://github.com/jrhubott/homeseer/issues",
   "dependencies": [],
   "codeowners": ["@marthoc","jason@rhusoft.com"],
   "requirements": ["pyhs3ng == 1.0.1"]
